creating uts, and filter function on frontend